apps/union/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/hostname: raycast-relay
  name: &name workerd-raycast-relay
  namespace: apps
spec:
  ingressClassName: tailscale
  rules:
    - host: &host raycast-relay.qilin-qilin.ts.net
      http:
        paths:
          - backend:
              service:
                name: *name
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
